syntax = "proto3";

option csharp_namespace = "CombinationWebApp.Protos";

import "Protos/common.proto";
import "Protos/user.proto";

service CategoryService {
  rpc GetAll (Empty) returns (CategoryList);
  rpc GetBySearch (CategorySearchRequest) returns (CategoryList);
  rpc Save (CategoryRequest) returns (CategoryReply);
  rpc Update (CategoryRequest) returns (CategoryReply);
  rpc Remove (CategoryRemoveRequest) returns (Empty);
}

message CategoryList {
  repeated Category categories = 1;
}

message CategorySearchRequest {
  string search_query = 1;
}

message CategoryRequest {
  Category category = 1;
}

message CategoryRemoveRequest {
  int32 category_id = 1;
}

message CategoryReply {
  Category category = 1;
}
